hphp/hack/test/typecheck/nonnull/generic_type_parameter_constrained_by_nonnull.php
<?hh // strict

function cast<T as nonnull>(T $x): nonnull {
  return $x;
}
